  All" and similar operations significantly. This change improves
  performance of undos of "Replace All".

- Improved performance of text area when a lot of changes are made to a
  buffer, especially while selections are active, or if soft wrap is
  switched on. Again this improves performance of "Replace All", which
  was nearly unusable with soft wrap.

+ Miscellaneous Changes:

- If the user and system macro directories have a subdirectory with the
  same name, the contents of the subdirectories are merged in the
  "Macros" menu. Previously, one could end up with two "Text" menus, for
  instance.

- The plugin list in the "Install Plugins" and "Update Plugins" dialog
  boxes is now categorized.

- jEdit now remembers if a window was maximized when saving geometry if
  running under Java 1.4. (Chris Kent)

- The roots: filesystem now calls Java 1.4 methods where appropriate to
  obtain the roots. This means that on Windows, for example, in addition
  to listing drive letters, it will also list files on the desktop.

- The tips of the day have been updated for assorted jEdit 4.1 changes.

- User's guide is more up-to-date with respect to jEdit 4.1 now. There
  is still much to be done though.

+ Bug Fixes:

- The action "Insert Tab and Indent" was broken. If you reassigned TAB
  to "Insert Tab" to work around this problem in pre6, you can revert
  the assignment (unless you'd like the TAB key to always insert a tab,
  without indenting).

- Backed out Rex Young's ReadWriteLock.java fix from pre6 since it
  caused deadlocks.

- Fixed some long-standing bugs in the reverse search code.

- Dialogs that are shown by other dialogs have been updated to have the
  invoking dialog as their parent, instead of the containing frame. This
  should fix problems with some windows obscuring others, etc.
  (Marcelo Vanzin)

- Fixed a possible ClassCastException that could occur if macro
  directories were nested.
